banner with animation done

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -19,6 +19,10 @@
   .navbar-wagon-link {
     color: white;
   }
+  .navbar-wagon-brand img {
+    height: 70px;
+    margin-top: 30px;
+  }
 }
 
 /* Logo */
