--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 
 <div class="container text-center home-container">
   <div class="text-center title-features">
-    <h1><span class="highlight">COWORKING</span> ou <span class="highlight">BUREAUX CLASSIQUES</span> ?</h1>
+    <h1><h2 class="highlight">COWORKING</h2> ou <h2 class="highlight">BUREAUX CLASSIQUES</h2> ?</h1>
   </div>
   <div class="card">
    <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
@@ -66,8 +66,8 @@
           </div>
 
           <div class="card_content">
-            <h2 class="card_heading"><span class="highlight">Jeunes pousses</span></h2>
-            <p>Les <em>entrepreneurs</em>, seuls ou avec une petite équipe, font souvent face à la contrainte de la solitude. Louer des bureaux représente un budget conséquent et avoir une compréhension claire du marché de l'<strong>immobilier d'entreprise</strong> n'est pas chose facile. Il existe beaucoup de solutions permettant de limiter les investissements (<strong>Coworking</strong> ou <strong>sous-location</strong> par exemple) et de bénéficier de services inclus.</p>
+            <h2 class="card_heading"><h3 class="highlight">Jeunes pousses</h3></h2>
+            <p>Les entrepreneurs, seuls ou avec une petite équipe, font souvent face à la contrainte de la solitude. Louer des bureaux représente un budget conséquent et avoir une compréhension claire du marché de l'<strong>immobilier d'entreprise</strong> n'est pas chose facile. Il existe beaucoup de solutions permettant de limiter les investissements (<strong>Coworking</strong> ou <strong>sous-location</strong> par exemple) et de bénéficier de services inclus.</p>
 
             <% if user_signed_in? %>
             <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
@@ -94,8 +94,8 @@
           </div>
 
           <div class="card_content">
-            <h2 class="card_heading"><span class="highlight">Startups</span> à forte croissance</h2>
-            <p>Les <em>startups</em> connaissant une croissance forte font face à différents challenges comme les recrutements, le développement du business et toutes les autres tâches opérationnelles du quotidien. L'analyse de ses besoins en immobilier ainsi que la recherche des espaces de travail idoines ajoutent à cette charge de travail. Prendre une décision quant à s'installer dans un espace de <strong>Coworking</strong> ou prendre un bail classique est très stratégique et peut avoir des conséquences financières et logistiques lourdes.</p>
+            <h2 class="card_heading"><h3 class="highlight">Startups</h3></h2>
+            <p>Les startups connaissant une croissance forte font face à différents challenges comme les recrutements, le développement du business et toutes les autres tâches opérationnelles du quotidien. L'analyse de ses besoins en immobilier ainsi que la recherche des espaces de travail idoines ajoutent à cette charge de travail. Prendre une décision quant à s'installer dans un espace de <strong>Coworking</strong> ou prendre un bail classique est très stratégique et peut avoir des conséquences financières et logistiques lourdes.</p>
             <% if user_signed_in? %>
             <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
             <div class="flexbox">
@@ -121,8 +121,8 @@
           </div>
 
           <div class="card_content">
-            <h2 class="card_heading"><span class="highlight">Grands groupes</span></h2>
-            <p>La donne change et les <em>grandes entreprises</em> l'ont bien compris. Face à la mutation des modes de travail (<strong>Coworking</strong>, <strong>bureaux partagés</strong>), au besoin d'attirer et de retenir les talents (en prenant en compte les comportements des nouvelles générations) et de stimuler l'innovation des ses collaborateurs, elles font de plus en plus le choix d'installer certaines équipes dans des espaces de <strong>Coworking</strong>.</p>
+            <h2 class="card_heading"><h3 class="highlight">Grands groupes</h3></h2>
+            <p>La donne change et les grandes entreprises l'ont bien compris. Face à la mutation des modes de travail (<strong>Coworking</strong>, <strong>bureaux partagés</strong>), au besoin d'attirer et de retenir les talents (en prenant en compte les comportements des nouvelles générations) et de stimuler l'innovation des ses collaborateurs, elles font de plus en plus le choix d'installer certaines équipes dans des espaces de <strong>Coworking</strong>.</p>
             <% if user_signed_in? %>
             <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
             <div class="flexbox">
