--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -6,8 +6,11 @@
   text-align: center;
   color: white;
   position: absolute;
-  margin-top: 100px;
-  width: 100%;
+  left: 31%;
+  top: 6%;
+  width: 40%;
+  font-size: 15px;
+  height: 45px;
 }
 .alert-info {
   background: $green;
