--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,23 +1,21 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 20%), url('<%= image_path('parisjungle.jpg')%>');">
 
   <div class="banner-content">
-    <div class="content">
-      <div class="content__container">
-        <p class="content__container__text">
-          Le guide pour
-        </p>
-
-        <ul class="content__container__list">
-          <li class="content__container__list__item"> le Coworking !</li>
-          <li class="content__container__list__item">les bureaux !</li>
-          <li class="content__container__list__item">les startups !</li>
-          <li class="content__container__list__item">le Coworking !</li>
-        </ul>
-      </div>
-    </div>
     <div class="brand-banner">
       <h1>The <br> Real Estate <br> Jungle</h1>
     </div>
+    <br>
+    <br>
+    <div class="content">
+      <div class="content__container">
+        <p class="content__container__text">
+          Le guide qui accompagne les <span class="color-animation"></span> dans leur recherche de <em class="color-animation"></em>
+        </p>
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
     <% if user_signed_in? %>
     <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
     <div class="flexbox">
