--- a/app/assets/stylesheets/layouts/_banner.scss
+++ b/app/assets/stylesheets/layouts/_banner.scss
@@ -54,143 +54,181 @@
   margin-bottom: 40px;
 }
 
-
-// CSS animation for tagline V2
-
-.content {
-  position: absolute;
-  position: center;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 80px;
-  overflow:hidden;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 35px;
-  line-height: 50px;
-  color: #ecf0f1;
-
-  &__container {
-    font-weight: 600;
-    overflow: hidden;
-    height: 80px;
-    width: 900px;
-    padding: 1px 1px;
-    font-size: 31px;
-
-    &:before {
-      content: '[';
-      left: 0;
-    }
-
-    &:after {
-      content: ']';
-      position: absolute;
-      right: 0;
-    }
-
-    &:after, &:before {
-      position: absolute;
-      top: 0;
-
-      color: #00C29A;
-      font-size: 45px;
-      line-height: 40px;
-
-      -webkit-animation-name: opacity;
-      -webkit-animation-duration: 2s;
-      -webkit-animation-iteration-count: infinite;
-      animation-name: opacity;
-      animation-duration: 2s;
-      animation-iteration-count: infinite;
-    }
-
-    &__text {
-      display: inline;
-      float: center;
-
-    }
-
-    &__list {
-      margin-top: 0;
-      padding-left: 80px;
-      text-align: right;
-      list-style: none;
-
-      -webkit-animation-name: change;
-      -webkit-animation-duration: 10s;
-      -webkit-animation-iteration-count: infinite;
-      animation-name: change;
-      animation-duration: 10s;
-      animation-iteration-count: infinite;
-
-      &__item {
-        line-height:40px;
-        margin:0;
-      }
-    }
-  }
-}
-
 .color-animation {
   color: #00C29A;
   font-weight: bold;
 }
-
-@-webkit-keyframes opacity {
-  0%, 100% {opacity:0;}
-  50% {opacity:1;}
+.content {
+  span:before {
+    content: 'ENTREPRENEURS';
+    animation: animate infinite 10s;
+  }
 }
 
-@-webkit-keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+@keyframes animate {
+  0%
+  {
+    content: 'ENTREPRENEURS'
+  }
+  50%
+  {
+    content: 'STARTUPS'
+  }
+  100%
+  {
+    content: 'GRANDS GROUPES'
+  }
 }
 
-@-o-keyframes opacity {
-  0%, 100% {opacity:0;}
-  50% {opacity:1;}
-}
-
-@-o-keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
-}
-
-@-moz-keyframes opacity {
-  0%, 100% {opacity:0;}
-  50% {opacity:1;}
-}
-
-@-moz-keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
-}
-
-@keyframes opacity {
-  0%, 100% {opacity:0;}
-  50% {opacity:1;}
-}
-
+.content {
+  em:before {
+    content: "BUREAUX";
+    animation: change infinite 10s;
+  }
+ }
 @keyframes change {
-  0%, 12.66%, 100% {transform:translate3d(0,0,0);}
-  16.66%, 29.32% {transform:translate3d(0,-25%,0);}
-  33.32%,45.98% {transform:translate3d(0,-50%,0);}
-  49.98%,62.64% {transform:translate3d(0,-75%,0);}
-  66.64%,79.3% {transform:translate3d(0,-50%,0);}
-  83.3%,95.96% {transform:translate3d(0,-25%,0);}
+  0%
+  {
+    content: 'BUREAUX'
+  }
+  100%
+  {
+    content: 'COWORKING'
+  }
 }
+
+// CSS animation for tagline V2
+
+// .content {
+//   position: absolute;
+//   position: center;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+//   height: 80px;
+//   overflow:hidden;
+//   font-family: 'Montserrat', sans-serif;
+//   font-size: 35px;
+//   line-height: 50px;
+//   color: #ecf0f1;
+
+//   &__container {
+//     font-weight: 600;
+//     overflow: hidden;
+//     height: 80px;
+//     width: 900px;
+//     padding: 1px 1px;
+//     font-size: 31px;
+
+//     &:before {
+//       content: '[';
+//       left: 0;
+//     }
+
+//     &:after {
+//       content: ']';
+//       position: absolute;
+//       right: 0;
+//     }
+
+//     &:after, &:before {
+//       position: absolute;
+//       top: 0;
+
+//       color: #00C29A;
+//       font-size: 45px;
+//       line-height: 40px;
+
+//       -webkit-animation-name: opacity;
+//       -webkit-animation-duration: 2s;
+//       -webkit-animation-iteration-count: infinite;
+//       animation-name: opacity;
+//       animation-duration: 2s;
+//       animation-iteration-count: infinite;
+//     }
+
+//     &__text {
+//       display: inline;
+//       float: center;
+
+//     }
+
+//     &__list {
+//       margin-top: 0;
+//       padding-left: 80px;
+//       text-align: right;
+//       list-style: none;
+
+//       -webkit-animation-name: change;
+//       -webkit-animation-duration: 10s;
+//       -webkit-animation-iteration-count: infinite;
+//       animation-name: change;
+//       animation-duration: 10s;
+//       animation-iteration-count: infinite;
+
+//       &__item {
+//         line-height:40px;
+//         margin:0;
+//       }
+//     }
+//   }
+// }
+
+
+// @-webkit-keyframes opacity {
+//   0%, 100% {opacity:0;}
+//   50% {opacity:1;}
+// }
+
+// @-webkit-keyframes change {
+//   0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+//   16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+//   33.32%,45.98% {transform:translate3d(0,-50%,0);}
+//   49.98%,62.64% {transform:translate3d(0,-75%,0);}
+//   66.64%,79.3% {transform:translate3d(0,-50%,0);}
+//   83.3%,95.96% {transform:translate3d(0,-25%,0);}
+// }
+
+// @-o-keyframes opacity {
+//   0%, 100% {opacity:0;}
+//   50% {opacity:1;}
+// }
+
+// @-o-keyframes change {
+//   0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+//   16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+//   33.32%,45.98% {transform:translate3d(0,-50%,0);}
+//   49.98%,62.64% {transform:translate3d(0,-75%,0);}
+//   66.64%,79.3% {transform:translate3d(0,-50%,0);}
+//   83.3%,95.96% {transform:translate3d(0,-25%,0);}
+// }
+
+// @-moz-keyframes opacity {
+//   0%, 100% {opacity:0;}
+//   50% {opacity:1;}
+// }
+
+// @-moz-keyframes change {
+//   0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+//   16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+//   33.32%,45.98% {transform:translate3d(0,-50%,0);}
+//   49.98%,62.64% {transform:translate3d(0,-75%,0);}
+//   66.64%,79.3% {transform:translate3d(0,-50%,0);}
+//   83.3%,95.96% {transform:translate3d(0,-25%,0);}
+// }
+
+// @keyframes opacity {
+//   0%, 100% {opacity:0;}
+//   50% {opacity:1;}
+// }
+
+// @keyframes change {
+//   0%, 12.66%, 100% {transform:translate3d(0,0,0);}
+//   16.66%, 29.32% {transform:translate3d(0,-25%,0);}
+//   33.32%,45.98% {transform:translate3d(0,-50%,0);}
+//   49.98%,62.64% {transform:translate3d(0,-75%,0);}
+//   66.64%,79.3% {transform:translate3d(0,-50%,0);}
+//   83.3%,95.96% {transform:translate3d(0,-25%,0);}
+// }
 
 // 6 is the number of animation.
 // Here, there are 4 lines :
@@ -212,39 +250,3 @@
 
 // Animation text tagline V2
 
-span:before {
-  content: 'ENTREPRENEURS';
-  animation: animate infinite 10s;
-}
-
-@keyframes animate {
-  0%
-  {
-    content: 'ENTREPRENEURS'
-  }
-  50%
-  {
-    content: 'STARTUPS'
-  }
-  100%
-  {
-    content: 'GRANDS GROUPES'
-  }
-}
-
-em:before {
-  content: "BUREAUX";
-  animation: change infinite 10s;
-
-@keyframes change {
-  0%
-  {
-    content: 'BUREAUX'
-  }
-  100%
-  {
-    content: 'COWORKING'
-  }
-}
-
-}
