--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,33 +1,31 @@
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 20%), url('<%= image_path('parisjungle.jpg')%>');">
-
-  <div class="banner-content">
-    <div class="brand-banner">
-      <h1>The <br> Real Estate <br> Jungle</h1>
-    </div>
-    <br>
-    <br>
-    <div class="content">
-      <div class="content__container">
-        <p class="content__container__text">
-          Le guide qui accompagne les <span class="color-animation"></span> dans leur recherche de <em class="color-animation"></em>
-        </p>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+        <div class="banner-content">
+          <div class="brand-banner">
+            <h1>The <br> Real Estate <br> Jungle</h1>
+          </div>
+          <div class="content">
+            <p class="content__container__text">
+              Le guide qui accompagne les <span class="color-animation"></span> dans leur recherche de <em class="color-animation"></em>
+            </p>
+          </div>
+          <% if user_signed_in? %>
+          <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
+          <div class="flexbox">
+            <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
+          </div>
+          <% end %>
+          <% else %>
+          <%= form_tag(new_user_session_path, method: :get, class: 'form-search') do %>
+          <div class="flexbox">
+            <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+          </div>
+          <% end %>
+          <% end %>
+        </div>
       </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <% if user_signed_in? %>
-    <%= link_to new_user_demand_path(current_user), method: :get, class: 'form-search' do %>
-    <div class="flexbox">
-      <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-banner", style:"text-decoration:none" %>
-    </div>
-    <% end %>
-    <% else %>
-    <%= form_tag(new_user_session_path, method: :get, class: 'form-search') do %>
-    <div class="flexbox">
-      <%= submit_tag "TROUVEZ LES BUREAUX DE MES RÊVES", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
-    </div>
-    <% end %>
-    <% end %>
   </div>
 </div>
