banner & home design

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 
 <div class="container text-center home-container">
   <div class="text-center title-features">
-    <h1><h2 class="highlight">COWORKING</h2> ou <h2 class="highlight">BUREAUX CLASSIQUES</h2> ?</h1>
+    <h1><h2 class="highlight">COWORKING</h2> ou <h2 class="highlight">BUREAUX CLASSIQUES</h2></h1>
   </div>
   <div class="card">
    <div class="col-xs-12 col-sm-6 col-lg-3 image-home">
