--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 .home-container {
 background: white;
 margin-top: 50px;
+padding-bottom: 40px;
 box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 border: 1px solid rgba(0, 0, 0, 0.1);
 border-radius: 5px;
@@ -116,9 +117,8 @@ $card-radius:         0;
           box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
           border: 1px 1px 0px 0px solid rgba(0, 0, 0, 0.1);
           border-radius: 5px 5px 0px 0px;
-          // background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 80%)
-          // border-top-left-radius: ( $card-radius - $card-border-width );
-          // border-top-right-radius: ( $card-radius - $card-border-width );
+          -webkit-filter: brightness(1.5) contrast(1.4) hue-rotate(450deg); /* Safari 6.0 - 9.0 */
+          filter: brightness(1.5) contrast(1.4) hue-rotate(450deg);
         }
       }
 
@@ -127,7 +127,7 @@ $card-radius:         0;
         flex: 1 0 auto;
         flex-direction: column;
         box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-        border: 1px solid rgba(0, 0, 0, 0.1);
+        border: 0px 1px 1px 1px solid rgba(0, 0, 0, 0.1);
         margin-top: -60px;
         padding: 1.5em;
         border-radius: 0px 0px 5px 5px;
