--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: #373942;
+  background: $my-gray;
   transition: all 0.3s ease;
   height: 50px;
   padding: 0px 30px;
@@ -17,7 +17,7 @@
   background: transparent;
   box-shadow: none;
   .navbar-wagon-link {
-    color: white;
+    color: $my-white;
   }
   .navbar-wagon-brand img {
     height: 70px;
@@ -49,16 +49,16 @@
 .navbar-wagon-item {
   cursor: pointer;
   padding: 0 20px;
-  color: #00C29A;
+  color: $my-green;
 }
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: white;
+  color: $my-white;
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
-  color: #00C29A;
+  color: $my-green;
   text-decoration: none;
 }
 
@@ -71,7 +71,7 @@
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: #00C29A !important;
+  color: $my-green !important;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
@@ -87,7 +87,7 @@
   position: absolute;
   right: 10px;
   top: -6px;
-  background-color: white;
+  background-color: $my-white;
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
