--- a/app/assets/stylesheets/components/_sign_in.scss
+++ b/app/assets/stylesheets/components/_sign_in.scss
@@ -1,5 +1,5 @@
 .form-login {
-  background: white;
+  background: $my-white;
   padding: 10px 20px;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -14,7 +14,7 @@
   .btn {
     width: 100%;
     margin-bottom: 20px;
-    color: white;
+    color: $my-white;
     font-size: 15px;
   }
   .help-block {
