--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,5 +6,9 @@ $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #00C29A;
-$gray: #373942;
+$gray: #2F2F31;
 $light-gray: #F4F4F4;
+
+// own colors
+$my-gray: #2F2F31;
+$my-green: #00C29A;
