--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Bungee+Shade|Montserrat|Open+Sans:300,400,700|Roboto:400,900');
 
 // Define fonts for body and headers
-$body-font: "Open Sans", "Montserrat", "sans-serif";
-$headers-font: "Raleway", "Montserrat", "sans-serif";
+$body-font: "Montserrat", "sans-serif";
+$headers-font: "Montserrat", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
