--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 .home-container {
-background: white;
+background: $my-white;
 margin-top: 50px;
 padding-bottom: 40px;
 box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
@@ -44,6 +44,7 @@ border-radius: 5px;
   font-family: $body-font;
   font-size: 15px;
   text-align: justify;
+  letter-spacing: 1px;
 }
 
 .btn-recall {
@@ -161,6 +162,7 @@ $card-radius:         0;
           font-size: 15px;
           color: $my-white;
           text-align: justify;
+          letter-spacing: 1px;
         }
 
       }
