--- a/app/views/pages/concept.html.erb
+++ b/app/views/pages/concept.html.erb
@@ -1,9 +1,57 @@
-<div class="wrapper-pages">
+<!-- <div class="wrapper-pages"> -->
+<div class="concept-background-image" style="background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 0%), url('<%= image_path('parisjungle2.jpg')%>');">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-
+        <div class="brand-concept">
+          <h1>The <br> Real Estate <br> Jungle</h1>
+        </div>
       </div>
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
+      <div class="concept-content">
+        <h2>Pourquoi créer The Real Estate Jungle ?</h2>
+        <p>Nous avons décider de lancer The Real Estate Jungle pour 3 raisons :
+          <br>
+          <br>
+          1. Conseiller les entrepreneurs, les startups et les grands groupes dans le choix de leurs espaces de travail flexibles
+          <br>
+          2. Digitaliser l’approche du marché de l’immobilier d’entreprises avec un outil permettant de comparer les différentes alternatives (Coworking, bureaux classiques, sous-location, etc.)
+          <br>
+          3. Permettre aux utilisateurs qui recherchent leurs futurs bureaux de bénéficier d’un accompagnement sur mesure. En effet la démarche se fait en ligne et est ensuite prise en main par des consultants ayant une grande expérience de l’immobilier d’entreprise et des nouveaux de travail comme le coworking.
+          <br>
+          <br>
+          Le paysage de l’immobilier de bureaux est en mutation, les travailleurs, qu’ils soient au sein d’une startup, collaborateurs d’une grande entreprise ou encore indépendants, poussent de plus en plus les professionnels de l’immobilier à créer de espaces adaptés avec des engagements flexibles.
+          Ces nouveaux codes nécessitent une compréhension claire des différentes alternatives quant à la prise à bail de locaux. En effet l’immobilier est l’un des premiers coûts d’une entreprise, est stratégique pour le confort des employés et peut être essentiel concernant le développement des affaires.
+          <br>
+          Aujourd’hui il n’existe pas de cabinet de conseil ayant la capacité et la volonté d’accompagner les startups et les grands groupes dans la recherche de la solutions immobilière la plus adaptée à leurs besoins.</p>
+          <h2>Quel est le concept de The Real Estate Jungle ?</h2>
+          <p>Toutes ces raisons nous ont poussé à développer The Real Estate Jungle afin de proposer un conseil adapté aux startups et grands groupes recherchant, pour l’un des locaux pour la première fois ou en raison d’une forte croissance, pour l’autre recherchant des espaces flexibles bénéficiant des nouveaux codes de l’immobilier d’entreprises.
+            <br>
+            <br>
+            L’approche de The Real Estate Jungle est essentiellement tournée vers l’analyse de scénarios comparant des bureaux traditionnels avec les espaces de Coworking. Tous les éléments sont pris en compte :
+            <br>
+            <br>
+            - Les coûts (loyer, charges, taxes, services, investissements initiaux, remise en état lors du départ, etc.)
+            <br>
+            - La localisation
+            <br>
+            - Les types d’engagement et leurs contraintes (bail classique, facture de Coworking, durée ferme, engagement court/moyen/long terme)
+            <br>
+            - L’impact sur les salariés (temps de transport, conditions de travail, etc.)
+            <br>
+            - …
+            <br>
+            <br>
+            Cette approche par coût complet permet d’avoir une vision claire des futures dépenses en immobilier, permettant aux chefs d’entreprises de prendre les bonnes décisions. Elle permet aussi de négocier au plus juste avec les propriétaires immobiliers ou les espaces de Coworking. </p>
+            <h2>Pourquoi le nom The Real Estate Jungle ?</h2>
+            <p>Par métaphore la jungle représente le marché de l’immobilier d’entreprise. Il est rare de s’aventurer dans une jungle tropicale sans un guide. The Real Estate Jungle propose d’être ce guide dans la jungle urbaine. En effet l’immobilier d’entreprise est luxuriant et possède une multitude de types de bureaux et d’espaces de Coworking. En Sanskrit (origine du mot jungle) Jangala désigne des espaces non mis en valeur, nous souhaitons pouvoir mettre en valeur les espaces de travail en les sélectionnant de manière pragmatique et réfléchie tout en négociant les meilleures conditions. </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- </div> -->
