--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -23,7 +23,7 @@ $border-radius-large: 2px;
 $border-radius-small: 2px;
 
 // Override other variables below!
-$my-gray: #2F2F31;
+$my-gray: #313A3D;
 $my-light-gray: #616165;
 $my-green: #29AB87;
 $my-white: #FAFAFF;
