--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 80%), url('<%= image_path('parisjungle.jpg')%>');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 30%), url('<%= image_path('parisjungle4.jpg')%>');">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-sm-offset-3">
@@ -8,7 +8,7 @@
           </div>
           <div class="content">
             <p class="content__container__text">
-              Le guide qui accompagne les <span class="color-animation"></span> dans leur recherche de <em class="color-animation"></em>
+              Le guide qui accompagne les <span class="color-animation"></span> <br> dans leur recherche de <em class="color-animation"></em>
             </p>
           </div>
           <% if user_signed_in? %>
