--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
             <%= image_tag "TREJhome.png" %>
             <% end %>
           </li>
-          <li><a target="_blank" href="https://www.linkedin.com/in/gautierweigert/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+          <li><a target="_blank" href="#"><i class="fa fa-linkedin-square hidden" aria-hidden="true"></i></a>
           </li>
           <li><%= link_to "Contacts", pages_contact_path, class: "footer-links" %>
           </li>
