--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -36,6 +36,10 @@
           <br>
           A bientôt dans cette fascinante jungle immobilière :)
           </p>
+          <em>Tél: 06 17 98 75 96</em>
+          <br>
+          <em>Email: gautier@therealestatejungle.fr</em>
+          <br>
           <a target="_blank" href="https://www.linkedin.com/in/gautierweigert/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
         </div>
       </div>
