--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <% if user_signed_in? %>
 
     <!-- Links when logged in -->
-    <%= link_to "MES DEMANDES", user_demands_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "MES RECHERCHES", user_demands_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
     <%#= link_to "PROFIL", edit_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <%= link_to "CONTACTEZ-NOUS 06 17 98 75 96", pages_contact_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
@@ -50,6 +50,8 @@
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
+
+  <% if user_signed_in? %>
   <div class="navbar-wagon-item hidden-md hidden-lg">
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
@@ -60,8 +62,8 @@
           <% end %>
         </li>
         <li>
-          <%= link_to root_path do %>
-          <i class="fa fa-home"></i> <%= t(".sign_in", default: "Home") %>
+          <%= link_to user_demands_path(current_user) do %>
+          <i class="fa fa-home"></i> <%= t(".sign_in", default: "Mes recherches") %>
           <% end %>
         <li>
           <%= link_to destroy_user_session_path, method: :delete do %>
@@ -73,6 +75,31 @@
         <!-- <li><a href="#">Home</a></li> -->
         <!-- <li><a href="#">Log out</a></li> -->
       </ul>
+      <% else %>
+      <div class="navbar-wagon-item hidden-md hidden-lg">
+        <div class="dropdown">
+          <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li>
+              <%= link_to new_user_session_path do %>
+              <i class="fa fa-user"></i> <%= t(".sign_in", default: "S'identifier") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to root_path do %>
+              <i class="fa fa-home"></i> <%= t(".sign_in", default: "Home") %>
+              <% end %>
+            <li>
+              <%= link_to pages_contact_path do %>
+              <i class="fa fa-hand-o-right"></i>  <%= t(".sign_out", default: "Contact") %>
+                <% end %>
+              </li>
+              <!-- Old list -->
+            <!-- <li><a href="#">S'identifier</a></li> -->
+            <!-- <li><a href="#">Home</a></li> -->
+            <!-- <li><a href="#">Log out</a></li> -->
+          </ul>
+          <% end %>
     </div>
   </div>
 </div>
