btn recall home fixed

--- a/app/assets/stylesheets/demands/_demands.scss
+++ b/app/assets/stylesheets/demands/_demands.scss
@@ -126,7 +126,7 @@
   margin-top: 50px;
 }
 
-.btn-recall {
+.btn-recall-demands {
   background-color: $my-green;
   border-color: $my-green;
   font-size: 12px;
