--- a/app/views/demands/index.html.erb
+++ b/app/views/demands/index.html.erb
@@ -112,7 +112,7 @@
               <% end %>
               <%= link_to edit_user_demand_path(demand.user_id, demand), method: :get, class: 'form-search-demands' do %>
               <div class="flexbox">
-                <%= submit_tag "MODIFIER", class: "btn btn-primary btn-recall", style:"text-decoration:none" %>
+                <%= submit_tag "MODIFIER", class: "btn btn-primary btn-recall-demands", style:"text-decoration:none" %>
               </div>
               <% end %>
         </div>
