--- a/app/views/demand_mailer/creation_confirmation.html.erb
+++ b/app/views/demand_mailer/creation_confirmation.html.erb
@@ -3,7 +3,7 @@
 <p>Nous vous contacterons très rapidement à l'adresse suivante <b><%= @demand.user.email %></b>.</p>
 <p>Rendez-vous sur la page de votre cahier des charges en suivant le lien suivant:</p>
 <%= link_to "voir ma demande", user_demands_url(@demand.user_id)  %>
-<p>Vous pouvez modifier votre demande en suivant le lien suivant:</p>
+<p>Vous pouvez apporter des modifications directement sur le site</p>
 <p>Merci de la confiance que vous nous témoignez :)</p>
 <p>Au plaisir de vous rencontrer bientôt pour faire avancer votre projet immobilier.</p>
 <em>Gautier Weigert</em>
