--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class=" col-xs-12 col-sm-6 col-sm-offset-3">
       <div class="form-login">
-        <h2>Edit <%= resource_name.to_s.humanize %></h2>
+        <h2>Editer mon profil</h2>
 
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= f.error_notification %>
@@ -17,21 +17,21 @@
           <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
           <% end %>
 
-          <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-          <%= f.input :password_confirmation, required: false %>
-          <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+          <%= f.input :password, autocomplete: "off", label: "Mot de passe", hint: "Laissez blanc si vous ne souhaitez pas changer votre mot de passe", required: false %>
+          <%= f.input :password_confirmation, label: "Confirmez votre mot de passe", required: false %>
+          <%= f.input :current_password, label: "Mot de passe actuel", hint: "Nous avons besoin de votre mot de passe actuel pour procéder aux modifications", required: true %>
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Update" %>
+          <%= f.button :submit, "Mettre à jour" %>
         </div>
         <% end %>
 
-        <h3>Cancel my account</h3>
+        <h4>Supprimer mon compte</h4>
 
-        <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+        <p>Unhappy? <%= link_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Êtes vous sûrs ?" }, method: :delete %></p>
 
-        <%= link_to "Back", :back %>
+        <%= link_to "Retour", :back %>
 
       </div>
     </div>
