smtp postmark on construction

--- a/app/assets/stylesheets/demands/_demands.scss
+++ b/app/assets/stylesheets/demands/_demands.scss
@@ -127,8 +127,8 @@
 }
 
 .btn-recall-demands {
-  background-color: $my-green;
-  border-color: $my-green;
+  background-color: $my-gray;
+  border-color: $my-gray;
   font-size: 12px;
   width: auto;
   position: relative;
